--- a/src/assets/css/app_mobile.scss
+++ b/src/assets/css/app_mobile.scss
@@ -39,7 +39,7 @@
     left: 10%;
     top: 30%;
     transform: translateY(-50%);
-    color: rgb(232,212,0);
+    color: #FF4D5A;
     font-size: 1.2rem;
   }
   
