--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,7 +1,6 @@
 .page-wraper {
   width: 100%;
   height: 100%;
-  position: absolute;
   left: 0;
   transition: transform 1.2s;
   transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -63,7 +62,7 @@
   left: 60%;
   top: 50%;
   transform: translateY(-50%);
-  color: rgb(232,212,0);
+  color: #FF4D5A;
   font-size: 2rem;
 }
 
@@ -88,14 +87,14 @@
   width: 50%;
 
   div:first-child {
-    background: rgb(232,212,0);
+    background: #FF4D5A;;
     height: 4px;
     width: 60%;
     margin-bottom: 1rem;
   }
 
   div:last-child {
-    background: rgb(232,212,0);
+    background: #FF4D5A;
     height: 4px;
     width: 60%;
     float: right;
@@ -197,7 +196,7 @@
 }
   
 .column-preload-image {
-  background-color: rgb(232,212,0);
+  background-color: #FF4D5A;
   position: absolute;
   width: 10%;
   height: 100%;
@@ -228,3 +227,14 @@
   }
 }
 
+.position-relative {
+  position: relative
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.height-100vh {
+  height: 100vh;
+}
