--- a/src/assets/css/app_mobile.scss
+++ b/src/assets/css/app_mobile.scss
@@ -45,6 +45,14 @@
       font-size: 0.5em;
     }
   }
+
+  .title-2-cloud {
+    position: absolute;
+    left: 10%;
+    top: 30%;
+    transform: translateY(-50%);
+    color: #FF4D5A;
+  }
   
   .title-2-img {
     width: 80%;
