--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -54,6 +54,7 @@
   p {
     line-height: 2;
     font-size: 1.2em;
+    margin-top: 1em;
   }
 }
 
@@ -71,6 +72,7 @@
 
   h1 {
     font-size: 4.5rem;
+    font-weight: bold;
     text-shadow: 0 10px 15px rgba(2, 11, 22, 0.2);
   }
 }
@@ -84,7 +86,7 @@
 
   svg {
     height: 100%;
-    width: 100%;
+    width: 150%;
   }
 }
 
