--- a/src/pages/Home/Header/styles.module.scss
+++ b/src/pages/Home/Header/styles.module.scss
@@ -23,6 +23,10 @@
     color: white;
     font-size: 25px;
 
+    @include Responsive(SM) {
+      display: none;
+    }
+
     img {
       height: 100%;
     }
@@ -37,7 +41,7 @@
     margin-left: 20px;
     display: block;
     height: 30px;
-    width: 60px;
+    width: 58px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -54,19 +58,19 @@
 
     .line1 {
       transform-origin: 0% 0%;
-      transition: transform 0.4s ease-in-out;
+      transition: transform 0.3s ease-in-out;
 
       &.active {
-        transform: rotate(45deg);
+        transform: rotate(30deg);
       }
     }
 
     .line2 {
       transform-origin: 0% 100%;
-      transition: transform 0.4s ease-in-out;
+      transition: transform 0.3s ease-in-out;
 
       &.active {
-        transform: rotate(-45deg);
+        transform: rotate(-30deg);
       }
     }
   }
@@ -80,7 +84,7 @@
   top: 0;
   left: 0;
   background: linear-gradient(to right, #072142, #8c2b7a 42%, #ff4d5a);
-  overflow-x: hidden;
+  overflow: hidden;
   transition: 0.5s;
 
   .overlayContent {
@@ -92,13 +96,44 @@
     flex-direction: column;
 
     a {
-      font-size: 50px;
+      font-size: 100px;
       text-decoration: none;
       color: white;
+      position: relative;
+      font-weight: 600;
+
+      @include Responsive(SM) {
+        font-size: 80px;
+        font-weight: 500;
+      }
+
+      .lineThrough {
+        position: absolute;
+        left: 0;
+        top: 55%;
+        width: 0;
+        height: 7px;
+        background-color: white;
+        transition: 0.3s cubic-bezier(0.77, 0, 0.175, 1);
+      }
 
       &:hover {
-        text-decoration: line-through;
-        transition: 0.3s cubic-bezier(0.77, 0, 0.175, 1);
+        .lineThrough {
+          width: 100%;
+        }
+      }
+    }
+
+    .socialGroup {
+      display: none;
+      column-gap: 25px;
+
+      img {
+        width: 50px;
+      }
+
+      @include Responsive(SM) {
+        display: flex;
       }
     }
   }
