--- a/src/pages/Home/NavigationBar/styles.module.scss
+++ b/src/pages/Home/NavigationBar/styles.module.scss
@@ -1,5 +1,34 @@
-.headerContainer {
-  display: flex;
-  padding: 20px;
-  justify-content: space-between;
+.navigationContainer {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+
+  @include Responsive(SM) {
+    padding: 20px;
+    bottom: 0;
+    top: auto;
+    left: 50%;
+    transform: translateX(-50%) rotate(-90deg);
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+
+    li {
+      list-style-type: none;
+      width: 30px;
+      display: block;
+      height: 3.5px;
+      border-radius: 3px;
+      background-color: white;
+      cursor: pointer;
+      transition: all 0.2s;
+
+      &.active {
+        width: 50px;
+      }
+    }
+  }
 }
