--- a/src/pages/Home/Header/styles.module.scss
+++ b/src/pages/Home/Header/styles.module.scss
@@ -4,11 +4,21 @@
   justify-content: space-between;
   align-items: center;
   z-index: 10;
+  position: fixed;
+  width: 100%;
+
+  @include Responsive(SM) {
+    padding: 20px 20px;
+  }
 }
 
 .myName {
   font-size: 25px;
   z-index: 10;
+
+  @include Responsive(SM) {
+    font-size: 18px;
+  }
 }
 
 .linkGroup {
@@ -47,6 +57,11 @@
     justify-content: space-between;
     cursor: pointer;
     z-index: 10;
+
+    @include Responsive(SM) {
+      height: 18px;
+      width: 30px;
+    }
 
     .line {
       display: block;
@@ -96,7 +111,7 @@
     flex-direction: column;
 
     a {
-      font-size: 100px;
+      font-size: 90px;
       text-decoration: none;
       color: white;
       position: relative;
@@ -105,6 +120,7 @@
       @include Responsive(SM) {
         font-size: 80px;
         font-weight: 500;
+        font-size: 40px;
       }
 
       .lineThrough {
@@ -130,9 +146,16 @@
 
       img {
         width: 50px;
+
+        @include Responsive(SM) {
+          margin-top: auto;
+          width: 30px;
+        }
       }
 
       @include Responsive(SM) {
+        position: absolute;
+        bottom: 20px;
         display: flex;
       }
     }
