--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -2,4 +2,7 @@
   min-height: 100%;
   min-width: 100%;
   background-color: #061b34;
+  overflow: hidden;
+  height: 100%;
+  scroll-behavior: smooth;
 }
