--- a/src/components/HomeMainTitle/styles.module.scss
+++ b/src/components/HomeMainTitle/styles.module.scss
@@ -1,12 +1,16 @@
 .homeMainTitleContainer {
   position: absolute;
   left: 150px;
+  overflow: hidden;
 
   .title {
     font-size: 80px;
+    position: relative;
+    left: -100%;
   }
 
   .twoDash {
+    left: -100%;
     height: 25px;
     display: flex;
     flex-direction: column;
@@ -17,6 +21,8 @@
       height: 3px;
       background-color: #ff4d5a;
       width: 70px;
+      position: relative;
+      left: -100%;
     }
 
     .dash1 {
@@ -25,5 +31,36 @@
     .dash2 {
       align-self: flex-end;
     }
+  }
+
+  .subTitle {
+    left: -100%;
+    position: relative;
+  }
+
+  .button {
+    left: -100%;
+    position: relative;
+  }
+}
+
+// Animation definition here
+.titleRun {
+  animation-name: titleRunKeyFrame;
+  animation-duration: 2s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes titleRunKeyFrame {
+  0% {
+    background-color: red;
+    left: -100%;
+    top: 0px;
+  }
+  100% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
   }
 }
