--- a/src/utils/global-vars.scss
+++ b/src/utils/global-vars.scss
@@ -1,6 +1,8 @@
 $mainBoxShadow: 0 0 6px rgb(0 0 0 / 10%);
 $mainBoxShadow1: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
+$mainButtonColor: #ff4d5a;
+
 $XS: 480px;
 $SM: 768px;
 $MD: 1024px;
