--- a/src/components/HomeMainTitle/styles.module.scss
+++ b/src/components/HomeMainTitle/styles.module.scss
@@ -2,30 +2,35 @@
   position: absolute;
   left: 150px;
   overflow: hidden;
+  display: flex;
+  row-gap: 20px;
+  flex-direction: column;
+  align-items: flex-start;
 
   .title {
-    font-size: 80px;
+    font-size: 100px;
     position: relative;
-    left: -100%;
+    font-weight: bold;
+    letter-spacing: 7px;
   }
 
   .twoDash {
-    left: -100%;
-    height: 25px;
+    height: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 100px;
 
     .dash {
-      height: 3px;
-      background-color: #ff4d5a;
-      width: 70px;
+      height: 3.2px;
+      border-radius: 3px;
+      background-color: $mainButtonColor;
+      width: 60px;
       position: relative;
-      left: -100%;
     }
 
     .dash1 {
+      align-self: flex-start;
     }
 
     .dash2 {
@@ -34,33 +39,109 @@
   }
 
   .subTitle {
-    left: -100%;
     position: relative;
   }
 
   .button {
-    left: -100%;
     position: relative;
+    background-color: $mainButtonColor;
+    height: 40px;
+    border-radius: 40px;
+    border: none;
+    padding: 0 2em;
+    font-weight: 600;
+    flex-basis: auto;
+    cursor: pointer;
+    transition: opacity 0.2s;
+
+    &:hover {
+      opacity: 0.7;
+    }
   }
 }
 
 // Animation definition here
 .titleRun {
+  left: -100%;
   animation-name: titleRunKeyFrame;
-  animation-duration: 2s;
-  animation-delay: 1s;
+  animation-duration: 0.85s;
+  animation-delay: 0.5s;
   animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.4, 0.99, 0.4, 0.98);
+}
+@keyframes titleRunKeyFrame {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0px;
+  }
 }
 
-@keyframes titleRunKeyFrame {
-  0% {
-    background-color: red;
+.dash1Run {
+  left: -100%;
+  animation-name: dash1RunKeyFrame;
+  animation-duration: 0.8s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.4, 0.99, 0.4, 0.98);
+}
+@keyframes dash1RunKeyFrame {
+  from {
     left: -100%;
-    top: 0px;
   }
-  100% {
-    background-color: red;
+  to {
     left: 0px;
-    top: 0px;
+  }
+}
+
+.dash2Run {
+  left: -100%;
+  animation-name: dash2RunKeyFrame;
+  animation-duration: 0.8s;
+  animation-delay: 0.7s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.4, 0.99, 0.4, 0.98);
+}
+@keyframes dash2RunKeyFrame {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0px;
+  }
+}
+
+.subTitleRun {
+  left: -100%;
+  animation-name: subTitleRunKeyFrame;
+  animation-duration: 0.8s;
+  animation-delay: 0.8s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.4, 0.99, 0.4, 0.98);
+}
+@keyframes subTitleRunKeyFrame {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0px;
+  }
+}
+
+.buttonRun {
+  left: -100%;
+  animation-name: buttonRunKeyFrame;
+  animation-duration: 0.8s;
+  animation-delay: 0.9s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.4, 0.99, 0.4, 0.98);
+}
+@keyframes buttonRunKeyFrame {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0px;
   }
 }
