--- a/src/pages/Home/NavigationBar/styles.module.scss
+++ b/src/pages/Home/NavigationBar/styles.module.scss
@@ -3,10 +3,11 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 80;
+  left: 40px;
+  overflow: hidden;
 
   @include Responsive(SM) {
-    padding: 20px;
-    bottom: -60px;
+    bottom: 0px;
     top: auto;
     left: 50%;
     transform: translateX(-50%) rotate(-90deg);
@@ -16,6 +17,8 @@
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+    padding: 0;
+    transition: all 0.8s;
 
     li {
       list-style-type: none;
@@ -32,4 +35,8 @@
       }
     }
   }
+}
+
+.hideNavigationBar {
+  transform: translateX(-100%);
 }
