--- a/src/pages/Home/Header/styles.module.scss
+++ b/src/pages/Home/Header/styles.module.scss
@@ -91,6 +91,19 @@
   }
 }
 
+.backArrow {
+  position: fixed;
+  color: white;
+  top: 100px;
+  left: 40px;
+  cursor: pointer;
+  transition: all 0.8s;
+
+  &.hide {
+    left: 100&;
+  }
+}
+
 .overlay {
   width: 100%;
   height: 0;
