--- a/src/components/HomeMainBanner/styles.module.scss
+++ b/src/components/HomeMainBanner/styles.module.scss
@@ -11,6 +11,7 @@
   z-index: 1;
   overflow: hidden;
   cursor: pointer;
+  transition: all 0.8s;
 }
 
 .mainBannerCover {
@@ -50,6 +51,23 @@
   }
   to {
     bottom: 0px;
+  }
+}
+
+.pageNumberHideRun {
+  bottom: 0px;
+  animation-name: pageNumberHideRunKeyFrame;
+  animation-duration: 1s;
+  animation-delay: 0.8s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.4, 0.99, 0.4, 0.98);
+}
+@keyframes pageNumberHideRunKeyFrame {
+  from {
+    bottom: 0px;
+  }
+  to {
+    bottom: -100%;
   }
 }
 
@@ -117,18 +135,7 @@
 }
 
 .homeMainBannerDetailRun {
-  transform: scale(90%) translate(10%, 30px);
-  animation-name: homeMainBannerDetailRunKeyFrame;
-  animation-duration: 2.5s;
-  animation-delay: 0.2s;
-  animation-fill-mode: forwards;
-  animation-timing-function: cubic-bezier(0.4, 0.99, 0.4, 0.98);
-}
-@keyframes homeMainBannerDetailRunKeyFrame {
-  from {
-    transform: scale(90%) translate(10%, 30px);
-  }
-  to {
-    transform: scale(100%) translate(0);
-  }
+  right: 0;
+  height: 100vh;
+  width: 70vw;
 }
