--- a/src/components/HomeMainBanner/styles.module.scss
+++ b/src/components/HomeMainBanner/styles.module.scss
@@ -12,6 +12,14 @@
   overflow: hidden;
   cursor: pointer;
   transition: all 0.8s;
+
+  @include Responsive(SM) {
+    width: 80vw;
+    left: auto;
+    right: auto;
+    top: 80px;
+    height: 50vh;
+  }
 }
 
 .mainBannerCover {
@@ -138,4 +146,11 @@
   right: 0;
   height: 100vh;
   width: 70vw;
+
+  @include Responsive(SM) {
+    top: 0;
+    right: auto;
+    height: 70vh;
+    width: 100vw;
+  }
 }
