--- a/src/components/HomeMainTitle/styles.module.scss
+++ b/src/components/HomeMainTitle/styles.module.scss
@@ -2,17 +2,47 @@
   position: absolute;
   left: 150px;
   overflow: hidden;
-  display: flex;
+  z-index: 2;
+
+  @include Responsive(SM) {
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 100vw;
+    left: 0;
+    bottom: 110px;
+  }
+
+  @include Responsive(XS) {
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 100vw;
+    left: 0;
+    bottom: 110px;
+  }
+}
+
+.homeMainTitleWrap {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   row-gap: 20px;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
-  z-index: 2;
+
+  @include Responsive(SM) {
+    row-gap: 15px;
+  }
 
   .title {
     font-size: 100px;
     position: relative;
     font-weight: bold;
     letter-spacing: 7px;
+
+    @include Responsive(SM) {
+      font-size: 50px;
+    }
   }
 
   .twoDash {
@@ -54,6 +84,10 @@
     flex-basis: auto;
     cursor: pointer;
     transition: opacity 0.2s;
+
+    @include Responsive(SM) {
+      align-self: center;
+    }
 
     &:hover {
       opacity: 0.7;
