--- a/src/pages/Home/Header/styles.module.scss
+++ b/src/pages/Home/Header/styles.module.scss
@@ -100,6 +100,12 @@
   overflow: hidden;
   z-index: 89;
 
+  @include Responsive(SM) {
+    top: 65px;
+    left: 20px;
+    width: 40px;
+  }
+
   svg {
     position: relative;
     transition: all 0.5s;
