upgrade packages | smooth scroll when click back button

--- a/src/components/HomeContent/styles.module.scss
+++ b/src/components/HomeContent/styles.module.scss
@@ -8,10 +8,8 @@
   transition: all 0.8s;
 }
 
-.notDetailPage {
-  display: none;
-}
-
 .detailPage {
   background-color: black;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
