--- a/src/pages/Home/Header/styles.module.scss
+++ b/src/pages/Home/Header/styles.module.scss
@@ -6,6 +6,11 @@
   z-index: 100;
   position: fixed;
   width: 100%;
+  transition: color 0.4s;
+
+  &.blackVersion {
+    color: black;
+  }
 
   @include Responsive(SM) {
     padding: 20px 20px;
@@ -68,7 +73,15 @@
       height: 3px;
       width: 100%;
       border-radius: 10px;
-      background: white;
+      background-color: white;
+      transition: background-color 0.4s;
+      -webkit-transition: background-color 0.4s;
+      -o-transition: background-color 0.4s;
+      -moz-transition: background-color 0.4s;
+
+      &.blackVersion {
+        background-color: black;
+      }
     }
 
     .line1 {
