--- a/src/components/DetailDescription/styles.module.scss
+++ b/src/components/DetailDescription/styles.module.scss
@@ -1,4 +1,4 @@
-.detailContainer {
+.detailDescription {
   width: 100%;
   display: flex;
 
@@ -10,6 +10,8 @@
 .titleContainer {
   display: flex;
   flex: 1;
+  align-self: baseline;
+  align-items: center;
 
   .titleNumber {
     display: flex;
@@ -26,7 +28,6 @@
   }
 
   .titleTxt {
-    align-self: center;
     font-size: 20px;
     margin-left: 2em;
   }
