--- a/src/components/DetailFooter/styles.module.scss
+++ b/src/components/DetailFooter/styles.module.scss
@@ -1,7 +1,7 @@
 .footerContainer {
   width: 100%;
   height: 250px;
-  z-index: 90;
+  position: relative;
   background: linear-gradient(to right, #072142, #8c2b7a 42%, #ff4d5a);
   display: flex;
   justify-content: center;
