--- a/src/components/DetailDescription/styles.module.scss
+++ b/src/components/DetailDescription/styles.module.scss
@@ -12,6 +12,7 @@
   flex: 1;
   align-self: baseline;
   align-items: center;
+  width: 100%;
 
   .titleNumber {
     display: flex;
@@ -29,7 +30,13 @@
 
   .titleTxt {
     font-size: 20px;
-    margin-left: 2em;
+    text-align: center;
+    flex-grow: 1;
+
+    @include Responsive(SM) {
+      position: absolute;
+      width: 100%;
+    }
   }
 }
 
