--- a/src/components/MoonBackground/styles.module.scss
+++ b/src/components/MoonBackground/styles.module.scss
@@ -1,7 +1,12 @@
 .moonContainer {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+
+  @include Responsive(SM) {
+    height: 120vh;
+    width: 120vw;
+  }
 }
