--- a/src/components/MoonBackground/styles.module.scss
+++ b/src/components/MoonBackground/styles.module.scss
@@ -1,12 +1,15 @@
 .moonContainer {
   position: fixed;
-  left: 0;
+  left: 20%;
   top: 0;
   height: 100vh;
   width: 100vw;
 
   @include Responsive(SM) {
-    height: 120vh;
-    width: 120vw;
+    left: 0;
+    top: -20%;
+    height: 140vh;
+    width: 140vw;
+    transform: translate3d(calc((100vw - 140vw) / 2), calc((100vh - 140vh) / 2), 0);
   }
 }
